--- a/.gitignore
+++ b/.gitignore
@@ -53,7 +53,7 @@ coverage.xml
 # Django stuff:
 *.log
 local_settings.py
-settings.py
+
 
 # Flask stuff:
 instance/
@@ -102,10 +102,11 @@ ENV/
 .mypy_cache/
 
 .DS_Store
-*.sqlite3
 media/
 *.pyc
 *.db
 *.pid
+*.env
+.env
 
 # Ignore Django Migrations in Development if you are working on team
