Created the blog app ad included the necessary models

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ django-countries = "*"
 djangorestframework = "*"
 django-filter = "*"
 drf-yasg2 = "*"
+django-cors-headers = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "3.8"
