--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,11 @@ chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
 Django==3.1.2
+django-cors-headers==3.5.0
 django-countries==6.1.3
 django-filter==2.4.0
 djangorestframework==3.12.1
-drf-yasg2==1.18.5
+drf-yasg2==1.19.3
 flake8==3.8.4
 idna==2.10
 importlib-metadata==2.0.0
@@ -27,5 +28,5 @@ ruamel.yaml.clib==0.2.2
 six==1.15.0
 sqlparse==0.4.1
 uritemplate==3.0.1
-urllib3==1.25.10
-zipp==3.3.0
+urllib3==1.25.11
+zipp==3.3.1
